[package]
name = "yoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
exec = { path = "exec" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[workspace]
members = ["git", "exec"]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
