[package]
name = "exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive", "unicode"] }
console = { version = "0.15.5", features = ["unicode-width"] }
indicatif = "0.17.3"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
git = { path = "../git" }
serde = { version = "1.0.152", features = ["derive"] }
tracing = { version = "0.1.37" }
tracing-subscriber = "0.3.16"
once_cell = "1.17.1"
regex = "1.7.1"
inquire = "0.6.0"
dirs = "4.0.0"
serde_json = "1.0.94"
